# ComfyUI-SuperBeasts

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  LICENSE_SUPERPOP.txt  README.md  README2.md  __init__.py  pyproject.toml  superbeastsai_nodes.py  tensor_blueprint.csv  test1.py  test2.py
.github/workflows/: publish.yml
docs/: SuperBeasts.AI-SuperPopColorAdjustment.json  batch-management.md  deprecated.md  hdr-effects.md  super-pop-color-adjustment.md
docs/Workflows/: SuperBeasts.AI-SuperPopColorAdjustment.json
docs/Workflows/SPCA/: SuperBeasts.AI-SuperPopColorAdjustment.json
js/: superbeasts.js  superbeasts_node_color.js
models/: SuperBeasts_ColorAdjustment_512px.onnx
scripts/: dump_onnx_tensors.py  tensor_blueprint.csv
torch_models/: __init__.py  contextual_residual_unet_v4.py  contextual_residual_unet_v4_partial.py  contextual_residual_unet_v4_pt.py  sb_layers.py
