[project]
name = "comfyui-superbeasts"
description = "Custom nodes by SuperBeasts.AI including Super Pop Color Adjustment, HDR Effects and Image/Mask batching tools and more. (@SuperBeasts.AI on Instagram)"
version = "1.2"
# Use file-based license reference to avoid multi-line strings inside inline tables (which TOML disallows)
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/SuperBeastsAI/ComfyUI-SuperBeasts"
"Super Pop Color Adjustement Model (license)" = "https://github.com/SuperBeastsAI/SuperBeastsAI-Models/tree/main/SuperPopColorAdjustment"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "superbeastsai"
DisplayName = "ComfyUI-SuperBeasts"
Icon = "https://raw.githubusercontent.com/SuperBeastsAI/ComfyUI-SuperBeasts/refs/heads/master/docs/assets/icon.png"